<resources>
    <string name="app_name">伙影</string>
    <string name="naruto_coin">影币</string>
    <string name="hello_world">欢迎使用伙影</string>
    <string name="main_title">欢迎使用伙影</string>
    <string name="start_naruto">开始约会</string>
    <string name="dynamic_create_hint">说点什么吧...</string>
    <string name="integer_default">0</string>
    <string name="delete">C</string>
    <string name="noText">暂没有数据</string>
    <string name="loadfail_hint">加载失败,请点击重试</string>
    <string name="linefail_hint">加载失败,请检查网络</string>
    <string name="distance_company">km</string>
    <string name="receive_none">领取</string>
    <string name="receive_have">已领取</string>
    <string name="home_item_1">火影日排行榜</string>
    <string name="user_evaluation">伙影评价</string>
    <string name="user_photo_show">Show</string>
    <string name="user_none_sign">这家伙,很懒没有任何介绍</string>
    <string name="home_miss">今日约会</string>
    <string name="home_dynamic">动态</string>
    <string name="home_near">附近</string>
    <string name="miss">约会</string>
    <string name="miss_login">点击登陆</string>
    <string name="miss_agree">同意此申请</string>
    <string name="miss_agree_after">^_^感谢您</string>
    <string name="miss_wait_handle">等待对方同意</string>
    <string name="miss_evlation">评价</string>
    <string name="miss_enter">报名</string>
    <string name="miss_cancel">撤销</string>
    <string name="kicked_out">踢出用户</string>
    <string name="cancel_miss">取消约会</string>
    <string name="miss_coin_hint">悬赏</string>
    <string name="miss_invite">应邀人%1$s个</string>
    <string name="miss_me">约我</string>
    <string name="miss_have">%1$s 个约会,点击查看</string>
    <string name="miss_none">暂时没有约会</string>
    <string name="miss_cinema">约会影院</string>
    <string name="miss_user">发起</string>
    <string name="miss_date">时间</string>
    <string name="miss_state">状态</string>
    <string name="miss_stage">参与状态</string>
    <string name="miss_part_list">应约人</string>
    <string name="miss_take_list">参与人</string>
    <string name="attend_have">%1$s 个应约人</string>
    <string name="attend_none">暂时没有应约人</string>
    <string name="hope_have">点击查看参与人</string>
    <string name="hope_none">暂时没有参与人</string>
    <string name="branch_coin">派发影币</string>
    <string name="my_miss">我的约会</string>
    <string name="my_participate">我的邀请</string>
    <string name="touch_miss">参与的约会</string>
    <string name="touch_miss_have">参与了%1$s 个约会,点击查看</string>
    <string name="invite_miss_have">%1$s 个约会邀请,点击查看</string>
    <string name="my_invitation">邀请的约会</string>
    <string name="more">更多></string>
    <string name="scenarists">导演</string>
    <string name="stars">主演</string>
    <string name="cinema_detail">影院信息</string>
    <string name="cinema_name">影院名称</string>
    <string name="cinema_address">影院地址</string>
    <string name="cinema_phone">影院电话</string>
    <string name="miss_lately">最近</string>
    <string name="miss_best">最款</string>
    <string name="movie_interval">片长%1$s分钟</string>
    <string name="movie_start">首映时间%1$s</string>
    <string name="movie_detail">观影信息</string>
    <string name="movie_cinema">上映影院</string>
    <string name="movie_none_score">暂无评分</string>
    <string name="movie_score_hint">评分&#58;</string>
    <string name="evlatuion_hint">评论&#58;</string>
    <string name="search_cinema">选择影院</string>
    <string name="comment">评论</string>
    <string name="comment_hint">请输入评论</string>
    <string name="movie_comment">影片评论</string>
    <string name="movie_comment_none">暂无评论</string>
    <string name="movie_comment_have">%1$s人评论,点击查看更多&gt;</string>
    <string name="movie_miss">观影约会</string>
    <string name="movie_intro">影片简介</string>
    <string name="movie_name">影片</string>
    <string name="movie_miss_tryst"><Data><![CDATA[共<font color="#ff6434"><b>%1$s</b></font>个约会]]></Data></string>
    <string name="user_movie_pre">电影喜好</string>
    <string name="user_movies">想看的电影</string>
    <string name="user_miss">Ta的约会</string>
    <string name="user_dynamic">Ta的动态</string>
    <string name="dynamic_have">点击查看</string>
    <string name="self_miss">我的约会</string>
    <string name="user_session">聊聊</string>
    <string name="user_love_movie"><Data><![CDATA[Ta想看<font color="#ff6434"><b>%1$s</b></font>等%2$s部电影]]></Data></string>
    <string name="user_ing_miss">%1$s个进行中的约会</string>
    <string name="user_love">心动</string>
    <string name="user_love_count">%1$s人心动过</string>
    <string name="user_love_none">暂无心动</string>
    <string name="movie_none">暂时还没有哟</string>
    <string name="movie_have">想看%1$s部电影,点击查看</string>
    <string name="want_see">想看</string>
    <string name="recently_want_see">Ta想看</string>
    <string name="miss_create">新建约会</string>
    <string name="user_invite">邀请</string>
    <string name="login_btn_hint">登录</string>
    <string name="wechat_btn_hint">微信登录</string>
    <string name="sina_btn_hint">新浪微博登录</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="password_confirm">请确认密码</string>
    <string name="forget_pass">忘记密码？</string>
    <string name="register">注册</string>
    <string name="send">发送</string>
    <string name="resend">重新发送</string>
    <string name="captcha">验证码</string>
    <string name="account_hint">请输入手机号</string>
    <string name="password_hint">请输入密码</string>
    <string name="captcha_hint">输入验证码</string>
    <string name="captcha_change"><u>换一张</u></string>
    <string name="captcha_input">请输入图片中内容</string>
    <string name="current_movie">正在上映</string>
    <string name="upcoming_movie">即将上映</string>
    <string name="register_hint">请确认您的国家或地区并输入手机号</string>
    <string name="head_hint">设置头像</string>
    <string name="photograph">拍照</string>
    <string name="picture_lib">图片库</string>
    <string name="charm">颜值</string>
    <string name="message">留言</string>
    <string name="love">心动</string>
    <string name="love_hint">心动</string>
    <string name="random">随机</string>
    <string name="nickname">昵称</string>
    <string name="nonenickname">未设置昵称</string>
    <string name="edit_nick">请输入昵称</string>
    <string name="edit">编辑</string>
    <string name="head">头像</string>
    <string name="sex">性别</string>
    <string name="sex_hint">性别选择</string>
    <string name="men">男</string>
    <string name="women">女</string>
    <string name="sex_men">♂%1$s</string>
    <string name="sex_women">♀%1$s</string>
    <string name="edit_sex">保密</string>
    <string name="birthday">生日</string>
    <string name="birthday_hint">修改生日</string>
    <string name="missdate">时间</string>
    <string name="missdate_hint">选择约会时间</string>
    <string name="edit_birthday">1980-01-01</string>
    <string name="email">邮箱</string>
    <string name="edit_email">请输入邮箱</string>
    <string name="edit_sign">请输入签名</string>
    <string name="mobile">手机</string>
    <string name="edit_mobile">请输入手机</string>
    <string name="signature">个性签名</string>
    <string name="hobby">喜好</string>
    <string name="runTime">约会时间</string>
    <string name="coin">影币</string>
    <string name="runTime_hint">请选择约会时间</string>
    <string name="coin_hint">悬赏影币</string>
    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>
    <string name="action_settings">Settings</string>
    <string name="friends_text">火影</string>
    <string name="minuteago">分钟前</string>
    <string name="hourago">小时前</string>
    <string name="dayago">天前</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="tip_reload">重新加载</string>
    <string name="tip_network_busy">网络连接失败</string>
    <string name="tip_look_more">查看更多</string>
    <string name="check_update_tips">正在检查更新......</string>
    <string name="no_new_verson_tips">当前已是最新版本</string>
    <string name="find_new_verson_tips">发现新版本</string>
    <string name="at_now">刚刚</string>
    <string name="left_drawer_no_login_tip">请登录</string>
    <string name="left_drawer_item_search">搜索</string>
    <string name="left_drawer_item_offline">离线</string>
    <string name="left_drawer_item_offline_cancel">取消离线</string>
    <string name="my_friends">好友</string>
    <string name="left_drawer_item_my_friends">我的好友</string>
    <string name="left_drawer_item_my_coin">我的影币</string>
    <string name="left_drawer_item_my_dynamic">我的历史动态</string>
    <string name="left_drawer_item_my_letters">我的消息</string>
    <string name="left_drawer_item_setting">设置</string>
    <string name="left_drawer_item_logout">注销用户</string>
    <string name="left_drawer_item_feedback">反馈</string>
    <string name="left_drawer_item_info">关于</string>
    <string name="drawer_right_tip_no_login">点击登录</string>
    <string name="setting_clear">清理缓存</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_update">检查新版本</string>
    <string name="setting_switch_domain">启动网络调试</string>
    <string name="setting_use_help">使用帮助</string>
    <string name="app_copyright">© 伙影网 huoying.com</string>
    <string name="favorite_btn_delete">删除</string>
    <string name="favorite_btn_edit">编辑</string>
    <string name="favorite_btn_cancel">取消</string>
    <string name="drawer_btn_rss">提示</string>
    <string name="label_cancel_dislike">撤消</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="set">设置</string>
    <string name="release">直接发布</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="Send_the_following_pictures">发送以下图片？</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="not_download">未下载:</string>
    <string name="Into_the_blacklist">移入到黑名单？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="Have_downloaded">已下载</string>
    <string name="Did_not_download">未下载</string>
    <string name="error_send_invalid_content">你发送了不合法的消息内容</string>
    <string name="error_send_not_in_the_group">你已经不在此群了</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice">声音</string>
</resources>