<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="fill_parent"  
    android:layout_height="fill_parent"  
    android:clickable="true"  
    android:orientation="vertical"  
    android:padding="20.0dip" >  
  
    <LinearLayout  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:layout_gravity="center"  
        android:background="@drawable/bg_bombbox"  
        android:orientation="vertical" >  
  
        <TextView  
            android:id="@+id/title"  
            style="@style/text_18_ffffff"  
            android:layout_width="fill_parent"  
            android:layout_height="40.0dip"  
            android:gravity="center"  
            android:visibility="visible" />  
  
        <LinearLayout  
            android:id="@+id/content"  
            android:layout_width="fill_parent"  
            android:layout_height="fill_parent"  
            android:orientation="vertical"
            android:gravity="center" >  
  
  
            <ImageView  
                android:id="@+id/captcha"  
                android:layout_width="100dip"  
                android:layout_height="50dip"  
          		android:gravity="center" 
                android:paddingTop="15.0dip" />  
                
             <TextView  
                android:id="@+id/change"  
                style="@style/text_16_666666"  
                android:layout_width="fill_parent"  
                android:layout_height="wrap_content"  
          		android:gravity="center" 
          		android:text="@string/captcha_change"
                android:paddingTop="15.0dip" 
                android:paddingRight="8dp"/>  
                
             
             <EditText  
                android:id="@+id/captcha_input"  
                style="@style/text_16_666666"  
                android:layout_width="fill_parent"  
                android:layout_height="wrap_content"  
          		android:gravity="center" 
          		android:hint="@string/captcha_input"
                android:layout_marginTop="15.0dip"
                android:layout_marginBottom="15dip"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"/>  
                
            
                
                
            
        </LinearLayout>  
  
        <View  
            android:layout_width="fill_parent"  
            android:layout_height="1.0px"  
            android:background="#ffd0d0d0" />  
  
        <LinearLayout  
            android:layout_width="fill_parent"  
            android:layout_height="60.0dip"  
            android:layout_gravity="bottom"  
            android:background="@drawable/dialog_bottom_bg"  
            android:gravity="center"  
            android:orientation="horizontal" >  
  
            <Button  
                android:id="@+id/positiveButton"  
                android:layout_width="114.0dip"  
                android:layout_height="40.0dip"  
                android:background="@drawable/common_button_white"  
                android:gravity="center"  
                android:textColor="#1aa294"
                android:text="@string/cancel" />  
  
            <Button  
                android:id="@+id/negativeButton"  
                android:layout_width="114.0dip"  
                android:layout_height="40.0dip"  
                android:layout_marginLeft="20.0dip"  
                android:textColor="#ffffffff"
                android:background="@drawable/common_button_blue"  
                android:gravity="center"  
                android:text="@string/ok" />  
        </LinearLayout>  
    </LinearLayout>  
  
</FrameLayout>  