<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="20.0dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_bombbox"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            style="@style/text_18_ffffff"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:gravity="center"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/comment_input"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/inputSize2"
                android:layout_marginBottom="15dip"
                android:layout_marginLeft="@dimen/input_margin_left"
                android:layout_marginRight="@dimen/input_margin_right"
                android:layout_marginTop="15.0dip"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/comment_hint"
                android:inputType="textMultiLine"
                android:maxLength="100"
                android:minLines="3"
                android:singleLine="false" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="#ffd0d0d0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:layout_gravity="bottom"
            android:background="@drawable/dialog_bottom_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/positiveButton"
                android:layout_width="114.0dip"
                android:layout_height="40.0dip"
                android:background="@drawable/common_button_white"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="#1aa294" />

            <Button
                android:id="@+id/negativeButton"
                android:layout_width="114.0dip"
                android:layout_height="40.0dip"
                android:layout_marginLeft="20.0dip"
                android:background="@drawable/common_button_blue"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="#ffffffff" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>