<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/window_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_bar"
        layout="@layout/common_head" />

    <LinearLayout
        android:id="@+id/scrollAreaLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title_bar"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/item_padding_bottom"
            android:paddingTop="@dimen/nav_padding_top" >

            <EditText
                android:id="@+id/nickName"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/inputSize1"
                android:layout_marginLeft="@dimen/input_margin_left"
                android:layout_marginRight="@dimen/input_margin_right"
                android:background="@null"
                android:hint="@string/edit_nick"
                android:inputType="text"
                android:maxLength="16"
                android:maxLines="1"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/nickName"
                android:layout_marginRight="@dimen/input_margin_right"
                android:layout_marginTop="10dp"
                android:background="@drawable/titlebar_refresh_detail_cancel"
                android:paddingTop="10dp" />
        </RelativeLayout>

        <ImageView
            style="@style/input_item_line"
            android:layout_marginLeft="@dimen/layout_left"
            android:layout_marginRight="@dimen/layout_left" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/item_padding_bottom"
            android:paddingTop="@dimen/nav_padding_top" >

            <RadioGroup
                android:id="@+id/sexRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingLeft="20dp" >

                <RadioButton
                    android:id="@+id/men"
                    style="@style/GlobeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/men" />

                <RadioButton
                    android:id="@+id/women"
                    style="@style/GlobeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/women" />
            </RadioGroup>
        </RelativeLayout>

        <ImageView
            style="@style/input_item_line"
            android:layout_marginLeft="@dimen/layout_left"
            android:layout_marginRight="@dimen/layout_left" />
    </LinearLayout>

</RelativeLayout>